test/corpus/fail/no-timer-set.mo
=========
no-timer-set.mo
=========

//MOC-FLAG -no-timer

import { setTimer } = "mo:⛔";

---

(source_file
  (line_comment)
  (import
    (obj_pat
      (pat_field
        (identifier)))
    (text_literal)))
